# finite_state_machine

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  automate
data/: fileToRead.txt  saveAEF.txt
docs/: automates.xlsx
headers/: part_1.h  part_2.h  part_3.h  ressources.h  settings.h
headers/functions/: algo.h  demo.h  ht.h  input.h  librairies.h  modif.h  readFile.h  test.h  utils_split.h  writeFile.h
src/: main.c  part_1.c  part_2.c  part_3.c  settings.c  test_basic.c
src/functions/: algo.c  demo.c  ht.c  input.c  librairies.c  modif.c  readFile.c  test.c  utils_split.c  writeFile.c
